objects/copado__Logger_Event__e.object
<CustomObject>
    <description>Platform event to publish logs</description>
    <fields>
        <fullName>copado__Exception_Details__c</fullName>
        <description>Exception Details if any</description>
        <label>Exception Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Generic_Id__c</fullName>
        <description>Identifier/Context for the log</description>
        <label>Generic Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Limits_Usage__c</fullName>
        <description>Details of the limits used while publishing log event</description>
        <label>Limits Usage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Log_Level__c</fullName>
        <description>Log level of the log event</description>
        <label>Log Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Payload__c</fullName>
        <description>Payload of the log</description>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Section__c</fullName>
        <description>Origin of the log</description>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__User_Id__c</fullName>
        <description>Id of the running user publishing log event</description>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Logger Event</label>
    <pluralLabel>Logger Events</pluralLabel>
</CustomObject>